--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -59,7 +59,7 @@ spec:
     spec:
       containers:
       - name: web
-        image: patricklohner/kube-news:v1
+        image: patricklohner/kube-news:{{TAG}}
         resources:
           limits:
             memory: "128Mi"
