--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -88,6 +88,5 @@ spec:
   ports:
   - port: 80
     targetPort: 8080
-    #nodePort: 30000
-  #type: NodePort
-  type: LoadBalancer
+    nodePort: 30000
+  type: NodePort
