--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -56,6 +56,10 @@ spec:
     metadata:
       labels:
         app: web
+    annotations:
+      prometheus.io/scrap: "true"
+      prometheus.io/port: "8080"
+      prometheus.io/path: "/metrics"    
     spec:
       containers:
       - name: web
